infra.json properties added in apps DTO